syntax = "proto3";

package example;

option go_package = "github.com/example/protoc-gen-category/example;example";

import "category/options.proto";

// Enable all three effect types + Stripe
option (category.category_file) = {
    effects: [NETWORK, DATABASE, DISK]
    stripe: {
        plans: ["free", "pro", "enterprise"]
        webhook_secret_env: "STRIPE_WEBHOOK_SECRET"
        api_key_env: "STRIPE_SECRET_KEY"
    }
};

// User message with full category theory support
message User {
    option (category.category) = {
        functor: true
        monoid: true
        foldable: true
        traversable: true
        monad: true
        firestore_bridge: true
        stripe_customer: true
    };

    string id = 1;
    string name = 2;
    string email = 3;
    repeated string tags = 4;
    int64 score = 5 [(category.field_category) = { combine: SUM }];
    UserProfile profile = 6;
    string stripe_customer_id = 7;
}

message UserProfile {
    option (category.category) = {
        monoid: true
        semigroup: true
    };

    string bio = 1;
    string avatar_url = 2;
    int32 followers = 3 [(category.field_category) = { combine: SUM }];
    int32 following = 4 [(category.field_category) = { combine: SUM }];
}

// Order with monoid for aggregation
message Order {
    option (category.category) = {
        monoid: true
        foldable: true
    };

    string id = 1;
    string user_id = 2;
    repeated LineItem items = 3;
    int64 total_cents = 4 [(category.field_category) = { combine: SUM }];
    OrderStatus status = 5;
}

enum OrderStatus {
    ORDER_STATUS_UNSPECIFIED = 0;
    ORDER_STATUS_PENDING = 1;
    ORDER_STATUS_CONFIRMED = 2;
    ORDER_STATUS_SHIPPED = 3;
    ORDER_STATUS_DELIVERED = 4;
}

message LineItem {
    option (category.category) = {
        monoid: true
    };

    string product_id = 1;
    int32 quantity = 2 [(category.field_category) = { combine: SUM }];
    int64 price_cents = 3 [(category.field_category) = { combine: SUM }];
}

// API Error for bifunctor operations
message ApiError {
    option (category.category) = {
        semigroup: true
    };

    string code = 1 [(category.field_category) = { combine: FIRST }];
    repeated string messages = 2;
    map<string, string> details = 3;
}

// System configuration - global (not tenant-scoped)
message SystemConfig {
    option (category.category) = {
        firestore_bridge: true
        global: true
    };

    string id = 1;
    string version = 2;
    map<string, string> feature_flags = 3;
}

// Subscription with Stripe integration
message Subscription {
    option (category.category) = {
        firestore_bridge: true
        stripe_subscription: true
    };

    string id = 1;
    string user_id = 2;
    string stripe_subscription_id = 3;
    string plan = 4;
    string status = 5;
    int64 current_period_end = 6;
}

// Service requests/responses
message GetUserRequest {
    string id = 1;
}

message ListUsersRequest {
    int32 page_size = 1;
    string page_token = 2;
    string filter = 3;
}

message ListUsersResponse {
    repeated User users = 1;
    string next_page_token = 2;
}

message CreateUserRequest {
    User user = 1;
}

message UpdateUserRequest {
    User user = 1;
    repeated string update_mask = 2;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {}

message GetOrderRequest {
    string id = 1;
}

message ListOrdersRequest {
    string user_id = 1;
    int32 page_size = 2;
    string page_token = 3;
}

message ListOrdersResponse {
    repeated Order orders = 1;
    string next_page_token = 2;
}

// User Service with full Kleisli, middleware, parallel support
service UserService {
    option (category.category_service) = {
        kleisli: true
        middleware: true
        parallel: true
        retry: true
        circuit_breaker: true
        fanout: true
        mock: true
        connect_bridge: true
    };

    rpc GetUser(GetUserRequest) returns (User) {
        option (category.category_method) = {
            idempotent: true
        };
    }

    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
        option (category.category_method) = {
            idempotent: true
        };
    }

    rpc CreateUser(CreateUserRequest) returns (User);

    rpc UpdateUser(UpdateUserRequest) returns (User) {
        option (category.category_method) = {
            idempotent: true
        };
    }

    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
        option (category.category_method) = {
            idempotent: true
        };
    }
}

// Order Service with billing
service OrderService {
    option (category.category_service) = {
        kleisli: true
        middleware: true
        parallel: true
        mock: true
        stripe_billing: true
    };

    // Free tier - anyone can view orders
    rpc GetOrder(GetOrderRequest) returns (Order) {
        option (category.category_method) = {
            idempotent: true
            min_plan: "free"
        };
    }

    // Pro feature - list/search orders
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {
        option (category.category_method) = {
            idempotent: true
            min_plan: "pro"
        };
    }

    // Enterprise feature - bulk export with metering
    rpc BulkExportOrders(BulkExportOrdersRequest) returns (BulkExportOrdersResponse) {
        option (category.category_method) = {
            idempotent: true
            min_plan: "enterprise"
            metered: true
            meter_event: "bulk_exports"
        };
    }
}

message BulkExportOrdersRequest {
    string user_id = 1;
    string format = 2;
}

message BulkExportOrdersResponse {
    string download_url = 1;
    int32 order_count = 2;
}
